--- a/contact/index.html
+++ b/contact/index.html
@@ -39,7 +39,7 @@
               class="form"
               method="POST"
               enctype="multipart/form-data"
-              action="mailto:shodiyev.98@mail.ru"
+              action="http://vestop.github.io/contact/"
               autocomplete="off"
             >
               <div class="contacts__fieldset">
