--- a/projects/index.html
+++ b/projects/index.html
@@ -42,37 +42,25 @@
           <h3>Latest Projects</h3>
           <div class="portfolio__list">
             <article class="portfolio__item">
-              <a
-                href="https://github.com/kobrikov/234035-yeticave"
-                class="portfolio__link"
-                target="_blank"
-              >
-                <img src="../img/projects/yeticave.png" class="portfolio__image" alt="yeticave" />
+              <a href="https://vestop.github.io/crimerias/" class="portfolio__link" target="_blank">
+                <img src="../img/projects/crimeria.jpg" class="portfolio__image" alt="crimeria" />
               </a>
               <div class="portfolio__description">
-                <h4>Yeticave (HTML Academy project)</h4>
-                <p>HTML5, CSS3, PHP, MySQL</p>
+                <h4>Crimeria</h4>
+                <p>HTML5, CSS3, JQuery, Adaptived to Mobile Devices</p>
               </div>
             </article>
             <article class="portfolio__item">
-              <a
-                href="https://github.com/kobrikov/234035-keksobooking"
-                class="portfolio__link"
-                target="_blank"
-              >
-                <img
-                  src="../img/projects/keksobooking.png"
-                  class="portfolio__image"
-                  alt="keksobooking"
-                />
+              <a href="https://vestop.github.io/surf/" class="portfolio__link" target="_blank">
+                <img src="../img/projects/surf.jpg" class="portfolio__image" alt="surf" />
               </a>
               <div class="portfolio__description">
-                <h4>Keksobooking (HTML Academy project)</h4>
-                <p>HTML5, CSS3, JS</p>
+                <h4>Go Surf Landing Page</h4>
+                <p>HTML5, CSS3, JS, JQuery, Adaptived to Mobile Devices</p>
               </div>
             </article>
             <article class="portfolio__item">
-              <a href="http://kobrikov.com/mishka/" class="portfolio__link" target="_blank">
+              <a href="http://vestop.github.io/mishka/" class="portfolio__link" target="_blank">
                 <img src="../img/projects/mishka.png" class="portfolio__image" alt="mishka" />
               </a>
               <div class="portfolio__description">
@@ -81,7 +69,7 @@
               </div>
             </article>
             <article class="portfolio__item">
-              <a href="http://kobrikov.com/gllacy/" class="portfolio__link" target="_blank">
+              <a href="http://vestop.github.oi/gllacy/" class="portfolio__link" target="_blank">
                 <img src="../img/projects/gllacy.png" class="portfolio__image" alt="gllacy" />
               </a>
               <div class="portfolio__description">
