--- a/projects/index.html
+++ b/projects/index.html
@@ -1,122 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="author" content="Javohir Shodiyev" />
-    <meta name="keywords" content="Shodiyev, Javohir Shodiyev, Javohir website, Javohir site" />
-    <meta name="description" content="Javohir Shodiyev is a web developer from Uzbekistan." />
-    <title>Projects | Javohir Shodiyev - CV</title>
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="shortcut icon" href="../img/favicon.png" />
-    <link rel="apple-touch-icon" href="../img/apple-touch-icon.png" />
-  </head>
-  <body>
-    <input id="menuToggle" type="checkbox" hidden />
-    <header class="page-header">
-      <div class="page-header__inner">
-        <nav class="main-nav">
-          <label class="main-nav__toggle" for="menuToggle">
-            <i class="main-nav__icon">Menu</i>
-          </label>
-          <ul class="main-nav__list">
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="/">Home</a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--active">Projects</a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="/about/">About</a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="/contact/">Contact</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main>
-      <section class="portfolio">
-        <div class="portfolio__inner">
-          <h3>Latest Projects</h3>
-          <div class="portfolio__list">
-            <article class="portfolio__item">
-              <a href="https://vestop.github.io/crimerias/" class="portfolio__link" target="_blank">
-                <img src="../img/projects/crimeria.jpg" class="portfolio__image" alt="crimeria" />
-              </a>
-              <div class="portfolio__description">
-                <h4>Crimeria</h4>
-                <p>HTML5, CSS3, JQuery, Adaptived to Mobile Devices</p>
-              </div>
-            </article>
-            <article class="portfolio__item">
-              <a href="https://vestop.github.io/surf/" class="portfolio__link" target="_blank">
-                <img src="../img/projects/surf.jpg" class="portfolio__image" alt="surf" />
-              </a>
-              <div class="portfolio__description">
-                <h4>Go Surf Landing Page</h4>
-                <p>HTML5, CSS3, JS, JQuery, Adaptived to Mobile Devices</p>
-              </div>
-            </article>
-            <article class="portfolio__item">
-              <a href="http://vestop.github.io/mishka/" class="portfolio__link" target="_blank">
-                <img src="../img/projects/mishka.png" class="portfolio__image" alt="mishka" />
-              </a>
-              <div class="portfolio__description">
-                <h4>Mishka (HTML Academy project)</h4>
-                <p>BEM, LESS, HTML5, CSS3, JS</p>
-              </div>
-            </article>
-            <article class="portfolio__item">
-              <a href="http://vestop.github.oi/gllacy/" class="portfolio__link" target="_blank">
-                <img src="../img/projects/gllacy.png" class="portfolio__image" alt="gllacy" />
-              </a>
-              <div class="portfolio__description">
-                <h4>Gllacy (HTML Academy project)</h4>
-                <p>HTML5, CSS3</p>
-              </div>
-            </article>
-          </div>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="author" content="Javohir Shodiyev" />
+  <meta name="keywords" content="Shodiyev, Javohir Shodiyev, Javohir website, Javohir site" />
+  <meta name="description" content="Javohir Shodiyev is a web developer from Uzbekistan." />
+  <title>Projects | Javohir Shodiyev - CV</title>
+  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="shortcut icon" href="../img/favicon.png" />
+  <link rel="apple-touch-icon" href="../img/apple-touch-icon.png" />
+</head>
+
+<body>
+  <input id="menuToggle" type="checkbox" hidden />
+  <header class="page-header">
+    <div class="page-header__inner">
+      <nav class="main-nav">
+        <label class="main-nav__toggle" for="menuToggle">
+          <i class="main-nav__icon">Menu</i>
+        </label>
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="/">Home</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--active">Projects</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="/about/">About</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="/contact/">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="portfolio">
+      <div class="portfolio__inner">
+        <h3>Latest Projects</h3>
+        <div class="portfolio__list">
+          <article class="portfolio__item">
+            <a href="https://vestop.github.io/crimerias/" class="portfolio__link" target="_blank">
+              <img src="../img/projects/crimeria.jpg" class="portfolio__image" alt="crimeria" />
+            </a>
+            <div class="portfolio__description">
+              <h4>Crimeria</h4>
+              <p>HTML5, CSS3, JQuery, Adaptived to Mobile Devices</p>
+            </div>
+          </article>
+          <article class="portfolio__item">
+            <a href="https://vestop.github.io/surf/" class="portfolio__link" target="_blank">
+              <img src="../img/projects/surf.jpg" class="portfolio__image" alt="surf" />
+            </a>
+            <div class="portfolio__description">
+              <h4>Go Surf Landing Page</h4>
+              <p>HTML5, CSS3, JS, JQuery, Adaptived to Mobile Devices</p>
+            </div>
+          </article>
+          <article class="portfolio__item">
+            <a href="https://vestop.github.io/mishka/" class="portfolio__link" target="_blank">
+              <img src="../img/projects/mishka.png" class="portfolio__image" alt="mishka" />
+            </a>
+            <div class="portfolio__description">
+              <h4>Mishka (HTML Academy project)</h4>
+              <p>BEM, LESS, HTML5, CSS3, JS</p>
+            </div>
+          </article>
+          <article class="portfolio__item">
+            <a href="https://vestop.github.io/gllacy/" class="portfolio__link" target="_blank">
+              <img src="../img/projects/gllacy.png" class="portfolio__image" alt="gllacy" />
+            </a>
+            <div class="portfolio__description">
+              <h4>Gllacy (HTML Academy project)</h4>
+              <p>HTML5, CSS3</p>
+            </div>
+          </article>
+          <article class="portfolio__item">
+            <a href="https://vestop.github.io/mavic/" class="portfolio__link" target="_blank">
+              <img src="../img/projects/mavic.jpg" class="portfolio__image" alt="gllacy" />
+            </a>
+            <div class="portfolio__description">
+              <h4>Mavic</h4>
+              <p>HTML5, CSS3, JScript, JQuery</p>
+            </div>
+          </article>
+          <article class="portfolio__item">
+            <a href="https://vestop.github.io/barbershop/" class="portfolio__link" target="_blank">
+              <img src="../img/projects/barbershop.jpg" class="portfolio__image" alt="gllacy" />
+            </a>
+            <div class="portfolio__description">
+              <h4>Barbershop</h4>
+              <p>HTML5, CSS3</p>
+            </div>
+          </article>
+          <article class="portfolio__item">
+            <a href="https://vestop.github.io/cuba/" class="portfolio__link" target="_blank">
+              <img src="../img/projects/cuba.jpg" class="portfolio__image" alt="gllacy" />
+            </a>
+            <div class="portfolio__description">
+              <h4>Cuba Landing Page</h4>
+              <p>HTML5, CSS3, JQuery</p>
+            </div>
+          </article>
+          <article class="portfolio__item">
+            <a href="https://vestop.github.io/device/" class="portfolio__link" target="_blank">
+              <img src="../img/projects/device.jpg" class="portfolio__image" alt="gllacy" />
+            </a>
+            <div class="portfolio__description">
+              <h4>Device (HTML Academy project)</h4>
+              <p>HTML5, CSS3</p>
+            </div>
+          </article>
+          <article class="portfolio__item">
+            <a href="https://vestop.github.io/wp-landing/" class="portfolio__link" target="_blank">
+              <img src="../img/projects/wp-page.jpg" class="portfolio__image" alt="gllacy" />
+            </a>
+            <div class="portfolio__description">
+              <h4>WordPress Style Landing Page</h4>
+              <p>HTML5, CSS3, JQuery</p>
+            </div>
+          </article>
+          <article class="portfolio__item">
+            <a href="https://vestop.github.io/bussinespage/" class="portfolio__link" target="_blank">
+              <img src="../img/projects/bussinespage.jpg" class="portfolio__image" alt="gllacy" />
+            </a>
+            <div class="portfolio__description">
+              <h4>Bussines Company Landing Page</h4>
+              <p>HTML5, CSS3, JQuery, Slick-Carousel</p>
+            </div>
+          </article>
         </div>
-      </section>
-    </main>
-    <footer class="page-footer">
-      <div class="page-footer__inner">
-        <nav class="page-footer__social">
-          <a
-            href="https://t.me/jrr998"
-            class="page-footer__social-item page-footer__social-item--tg"
-            target="_blank"
-            rel="nofollow"
-            >TG</a
-          >
-          <a
-            href="https://www.facebook.com/javohir.98"
-            class="page-footer__social-item page-footer__social-item--fb"
-            target="_blank"
-            rel="nofollow"
-            >Facebook</a
-          >
-          <a
-            href="https://github.com/vestop"
-            class="page-footer__social-item page-footer__social-item--gh"
-            target="_blank"
-            rel="nofollow"
-            >Github</a
-          >
-          <a
-            href="mailto:shodiyev.98@mail.ru"
-            class="page-footer__social-item page-footer__social-item--email"
-            target="_blank"
-            rel="nofollow"
-            >Email</a
-          >
-        </nav>
-        <div class="page-footer__copyright">
-          <p>© Copyright 2020, Javohir Shodiyev.</p>
-        </div>
       </div>
-    </footer>
-  </body>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <div class="page-footer__inner">
+      <nav class="page-footer__social">
+        <a href="https://t.me/jrr998" class="page-footer__social-item page-footer__social-item--tg" target="_blank" rel="nofollow">TG</a>
+        <a href="https://www.facebook.com/javohir.98" class="page-footer__social-item page-footer__social-item--fb" target="_blank" rel="nofollow">Facebook</a>
+        <a href="https://github.com/vestop" class="page-footer__social-item page-footer__social-item--gh" target="_blank" rel="nofollow">Github</a>
+        <a href="mailto:shodiyev.98@mail.ru" class="page-footer__social-item page-footer__social-item--email" target="_blank" rel="nofollow">Email</a>
+      </nav>
+      <div class="page-footer__copyright">
+        <p>© Copyright 2020, Javohir Shodiyev.</p>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
